fix: controls alignment

--- a/scss/controls.scss
+++ b/scss/controls.scss
@@ -1,7 +1,9 @@
 .controls.ember-view {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   justify-content: center;
   display: flex;
+  top: 0;
+  z-index: 99999;
 }
